--- a/auftritte/auftritte_2002_2/auftritte_2002_2.html
+++ b/auftritte/auftritte_2002_2/auftritte_2002_2.html
@@ -30,3 +30,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2002_1/auftritte_2002_1.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003_1/auftritte_2003_1.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
