--- a/auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html
+++ b/auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html
@@ -37,3 +37,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004_1/auftritte_2004_1.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
