--- a/auftritte/auftritte_2004_3/auftritte_2004_3.html
+++ b/auftritte/auftritte_2004_3/auftritte_2004_3.html
@@ -24,3 +24,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004_2/auftritte_2004_2.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004_4/auftritte_2004_4.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
