--- a/auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html
+++ b/auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html
@@ -5,3 +5,10 @@
 				<a href="javascript:zoom800x600('auftritte/auftritte_2005-03-08/auftritte_2005-03-08_1.jpg')" target="_self"><img alt="Buchen &ndash; Kulturabend" src="auftritte/auftritte_2005-03-08/auftritte_2005-03-08_1_min.jpg" border="0" vspace="5" hspace="5" /></a>
 			</td>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-05-27/auftritte_2005-05-27.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
