--- a/auftritte/auftritte_2005-05-27/auftritte_2005-05-27.html
+++ b/auftritte/auftritte_2005-05-27/auftritte_2005-05-27.html
@@ -66,3 +66,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
