--- a/auftritte/auftritte_2005-09-24/auftritte_2005-09-24.html
+++ b/auftritte/auftritte_2005-09-24/auftritte_2005-09-24.html
@@ -111,3 +111,9 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html">&gt; zur&uuml;ck</a></li>
+		</ul>
+	</nav>
