--- a/auftritte/auftritte_2003_1/auftritte_2003_1.html
+++ b/auftritte/auftritte_2003_1/auftritte_2003_1.html
@@ -9,3 +9,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2002_2/auftritte_2002_2.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003_2/auftritte_2003_2.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
