--- a/auftritte/auftritte_2003_2/auftritte_2003_2.html
+++ b/auftritte/auftritte_2003_2/auftritte_2003_2.html
@@ -6,3 +6,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003_1/auftritte_2003_1.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
