--- a/auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html
+++ b/auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html
@@ -14,3 +14,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004_4/auftritte_2004_4.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
