--- a/auftritte/auftritte_2004_4/auftritte_2004_4.html
+++ b/auftritte/auftritte_2004_4/auftritte_2004_4.html
@@ -38,3 +38,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004_3/auftritte_2004_3.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004-5-30/auftritte_2004-5-30.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
