--- a/auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html
+++ b/auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html
@@ -57,3 +57,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-05-27/auftritte_2005-05-27.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-06-18/auftritte_2005-06-18.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
