--- a/auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html
+++ b/auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html
@@ -60,3 +60,10 @@
 			</td>
 		</tr>
 	</table>
+
+	<nav class="navigation">
+		<ul>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-06-18/auftritte_2005-06-18.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-09-24/auftritte_2005-09-24.html">&gt; weiter</a></li>
+		</ul>
+	</nav>
