--- a/impressum/impressum.html
+++ b/impressum/impressum.html
@@ -15,6 +15,6 @@
 	</h2>
 	<p class="inhalt1">
 		<a href="https://www.markusbrunner.de" target="_blank">Markus Brunner</a>, 
-		<a href="https://www.katjadeutschmann.de" target="_blank">Katja Brunner</a><br />
+		<a href="https://www.katjadeutschmann.de" target="_blank">Katja Deutschmann</a><br />
 	</p>
 	<br />
