--- a/auftritte/auftritte_2001_2/auftritte_2001_2.html
+++ b/auftritte/auftritte_2001_2/auftritte_2001_2.html
@@ -12,7 +12,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2001_1/auftritte_2001_1.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2001_1/auftritte_2001_1.html">&lt; zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2001_3/auftritte_2001_3.html">&gt; weiter</a></li>
 		</ul>
 	</nav>
