--- a/auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html
+++ b/auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html
@@ -8,7 +8,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html">&lt; zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2005-05-27/auftritte_2005-05-27.html">&gt; weiter</a></li>
 		</ul>
 	</nav>
