--- a/auftritte/auftritte_2002_1/auftritte_2002_1.html
+++ b/auftritte/auftritte_2002_1/auftritte_2002_1.html
@@ -11,7 +11,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2001_3/auftritte_2001_3.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2001_3/auftritte_2001_3.html">&lt; zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2002_2/auftritte_2002_2.html">&gt; weiter</a></li>
 		</ul>
 	</nav>
