--- a/auftritte/auftritte_2004_1/auftritte_2004_1.html
+++ b/auftritte/auftritte_2004_1/auftritte_2004_1.html
@@ -10,7 +10,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html">&lt; zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_2/auftritte_2004_2.html">&gt; weiter</a></li>
 		</ul>
 	</nav>
