--- a/auftritte/auftritte_2004_2/auftritte_2004_2.html
+++ b/auftritte/auftritte_2004_2/auftritte_2004_2.html
@@ -70,7 +70,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2004_1/auftritte_2004_1.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004_1/auftritte_2004_1.html">&lt; zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_3/auftritte_2004_3.html">&gt; weiter</a></li>
 		</ul>
 	</nav>
