--- a/auftritte/auftritte_2005-06-18/auftritte_2005-06-18.html
+++ b/auftritte/auftritte_2005-06-18/auftritte_2005-06-18.html
@@ -47,7 +47,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html">&gt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html">&lt; zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html">&gt; weiter</a></li>
 		</ul>
 	</nav>
