--- a/auftritte/auftritte_2001_1/auftritte_2001_1.html
+++ b/auftritte/auftritte_2001_1/auftritte_2001_1.html
@@ -17,6 +17,6 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2001_2/auftritte_2001_2.html">&gt; weiter</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2001_2/auftritte_2001_2.html">weiter</a></li>
 		</ul>
 	</nav>
