--- a/auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html
+++ b/auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html
@@ -18,7 +18,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2003_2/auftritte_2003_2.html">&lt; zur&uuml;ck</a></li>
-			<li><a class="ajax-link" href="auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html">&gt; weiter</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003_2/auftritte_2003_2.html">zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html">weiter</a></li>
 		</ul>
 	</nav>
