--- a/auftritte/auftritte_2003_2/auftritte_2003_2.html
+++ b/auftritte/auftritte_2003_2/auftritte_2003_2.html
@@ -9,7 +9,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2003_1/auftritte_2003_1.html">&lt; zur&uuml;ck</a></li>
-			<li><a class="ajax-link" href="auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html">&gt; weiter</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003_1/auftritte_2003_1.html">zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html">weiter</a></li>
 		</ul>
 	</nav>
