--- a/auftritte/auftritte_2004_4/auftritte_2004_4.html
+++ b/auftritte/auftritte_2004_4/auftritte_2004_4.html
@@ -41,7 +41,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2004_3/auftritte_2004_3.html">&lt; zur&uuml;ck</a></li>
-			<li><a class="ajax-link" href="auftritte/auftritte_2004-5-30/auftritte_2004-5-30.html">&gt; weiter</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004_3/auftritte_2004_3.html">zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2004-5-30/auftritte_2004-5-30.html">weiter</a></li>
 		</ul>
 	</nav>
