--- a/auftritte/auftritte_2001_3/auftritte_2001_3.html
+++ b/auftritte/auftritte_2001_3/auftritte_2001_3.html
@@ -10,7 +10,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2001_2/auftritte_2001_2.html">&lt; zur&uuml;ck</a></li>
-			<li><a class="ajax-link" href="auftritte/auftritte_2002_1/auftritte_2002_1.html">&gt; weiter</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2001_2/auftritte_2001_2.html">zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2002_1/auftritte_2002_1.html">weiter</a></li>
 		</ul>
 	</nav>
