--- a/auftritte/auftritte_2005-05-27/auftritte_2005-05-27.html
+++ b/auftritte/auftritte_2005-05-27/auftritte_2005-05-27.html
@@ -69,7 +69,7 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html">&lt; zur&uuml;ck</a></li>
-			<li><a class="ajax-link" href="auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html">&gt; weiter</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html">zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html">weiter</a></li>
 		</ul>
 	</nav>
