--- a/auftritte/auftritte_2005-09-24/auftritte_2005-09-24.html
+++ b/auftritte/auftritte_2005-09-24/auftritte_2005-09-24.html
@@ -114,6 +114,6 @@
 
 	<nav class="navigation">
 		<ul>
-			<li><a class="ajax-link" href="auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html">&lt; zur&uuml;ck</a></li>
+			<li><a class="ajax-link" href="auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html">zur&uuml;ck</a></li>
 		</ul>
 	</nav>
