--- a/auftritte/auftritte_2001_1/auftritte_2001_1.html
+++ b/auftritte/auftritte_2001_1/auftritte_2001_1.html
@@ -15,7 +15,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2001_2/auftritte_2001_2.html">weiter</a></li>
 		</ul>
