--- a/auftritte/auftritte_2002_1/auftritte_2002_1.html
+++ b/auftritte/auftritte_2002_1/auftritte_2002_1.html
@@ -9,7 +9,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2001_3/auftritte_2001_3.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2002_2/auftritte_2002_2.html">weiter</a></li>
