--- a/auftritte/auftritte_2001_2/auftritte_2001_2.html
+++ b/auftritte/auftritte_2001_2/auftritte_2001_2.html
@@ -10,7 +10,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2001_1/auftritte_2001_1.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2001_3/auftritte_2001_3.html">weiter</a></li>
