--- a/auftritte/auftritte_2002_2/auftritte_2002_2.html
+++ b/auftritte/auftritte_2002_2/auftritte_2002_2.html
@@ -31,7 +31,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2002_1/auftritte_2002_1.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2003_1/auftritte_2003_1.html">weiter</a></li>
