--- a/auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html
+++ b/auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html
@@ -15,7 +15,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_4/auftritte_2004_4.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html">weiter</a></li>
