--- a/auftritte/auftritte_2004_1/auftritte_2004_1.html
+++ b/auftritte/auftritte_2004_1/auftritte_2004_1.html
@@ -8,7 +8,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_2/auftritte_2004_2.html">weiter</a></li>
