--- a/auftritte/auftritte_2004_3/auftritte_2004_3.html
+++ b/auftritte/auftritte_2004_3/auftritte_2004_3.html
@@ -25,7 +25,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_2/auftritte_2004_2.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_4/auftritte_2004_4.html">weiter</a></li>
