--- a/auftritte/auftritte_2004_4/auftritte_2004_4.html
+++ b/auftritte/auftritte_2004_4/auftritte_2004_4.html
@@ -39,7 +39,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_3/auftritte_2004_3.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004-5-30/auftritte_2004-5-30.html">weiter</a></li>
