--- a/auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html
+++ b/auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html
@@ -58,7 +58,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2005-05-27/auftritte_2005-05-27.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2005-06-18/auftritte_2005-06-18.html">weiter</a></li>
