--- a/auftritte/auftritte_2005-06-18/auftritte_2005-06-18.html
+++ b/auftritte/auftritte_2005-06-18/auftritte_2005-06-18.html
@@ -45,7 +45,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2005-06-17/auftritte_2005-06-17.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html">weiter</a></li>
