--- a/auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html
+++ b/auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html
@@ -16,7 +16,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2003_2/auftritte_2003_2.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html">weiter</a></li>
