--- a/auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html
+++ b/auftritte/auftritte_2003-12-27/auftritte_2003-12-27.html
@@ -38,7 +38,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2003-10-18/auftritte_2003-10-18.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_1/auftritte_2004_1.html">weiter</a></li>
