--- a/auftritte/auftritte_2004_2/auftritte_2004_2.html
+++ b/auftritte/auftritte_2004_2/auftritte_2004_2.html
@@ -68,7 +68,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_1/auftritte_2004_1.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004_3/auftritte_2004_3.html">weiter</a></li>
