--- a/auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html
+++ b/auftritte/auftritte_2005-03-08/auftritte_2005-03-08.html
@@ -6,7 +6,7 @@
 			</td>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2004-05-30/auftritte_2004-05-30.html">zur&uuml;ck</a></li>
 			<li><a class="ajax-link" href="auftritte/auftritte_2005-05-27/auftritte_2005-05-27.html">weiter</a></li>
