--- a/auftritte/auftritte_2005-09-24/auftritte_2005-09-24.html
+++ b/auftritte/auftritte_2005-09-24/auftritte_2005-09-24.html
@@ -112,7 +112,7 @@
 		</tr>
 	</table>
 
-	<nav class="navigation">
+	<nav class="paging">
 		<ul>
 			<li><a class="ajax-link" href="auftritte/auftritte_2005-07-20/auftritte_2005-07-20.html">zur&uuml;ck</a></li>
 		</ul>
